--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,32 +84,36 @@
             </div>
           </div>
         </div>
+
+      </div>
     <% } %>
+
 </div>
 
 
 
 <% if(locals.user){ %>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
-<div id="map"></div>
+
     <script>
         function initMap(){
             map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 20,
-                center: {lat: 30.2500, lng: -97.7500}
+                zoom: 4,
+                center: {lat: 30.2500, lng: -97.7500},
+                mapTypeId: google.maps.MapTypeId.SATELLITE
             });
-            var bounds = google.maps.LatLngBounds();
             var sightings = <%- JSON.stringify(userBirds) %>;
-            for(var i = 0; i < sightings.length; i++){
-                var latlng = new google.maps.LatLng(sightings[i].lat, sightings[i].lng);
+            for(var x = 0; x < sightings.length; x++){
+                var latlng = new google.maps.LatLng(sightings[x].lat, sightings[x].lng);
+                var image = {url: sightings[x].birdImage, scaledSize: new google.maps.Size(20, 20)};
                 var marker = new google.maps.Marker({
                     map: map,
                     position: latlng,
-                    title: sightings[i].birdName
+                    title: sightings[x].birdName,
+                    icon: image
                 });
-                bounds.extend(latlng);
             }
-            map.fitBounds(bounds);
         }
     </script>
 <% } %>
@@ -126,15 +130,23 @@ $(document).ready(function(){
         }).done(function(sighting){
             console.log(sighting);
             var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
+            map.setCenter(latlng);
             var marker = new google.maps.Marker({
                 map: map,
                 position: latlng,
-                title: sighting.birdName,
-            });
-        )};
-    }
+                title: sighting.birdName
+            }); 
+            window.location.reload();
+        });
+    });        
 });
 </script>
+
+<script>
+
+</script>
+
+
 <% include ./partials/footer %>
 
 
