--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,56 +96,58 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
 
-    <script>
-        function initMap(){
-            map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
-                center: {lat: 30.2500, lng: -97.7500},
-                mapTypeId: google.maps.MapTypeId.SATELLITE
-            });
-            var sightings = <%- JSON.stringify(userBirds) %>;
-            for(var x = 0; x < sightings.length; x++){
-                var latlng = new google.maps.LatLng(sightings[x].lat, sightings[x].lng);
-                var image = {url: sightings[x].birdImage, scaledSize: new google.maps.Size(20, 20)};
-                var marker = new google.maps.Marker({
-                    map: map,
-                    position: latlng,
-                    title: sightings[x].birdName,
-                    icon: image
-                });
-            }
-        }
-    </script>
-<% } %>
 <script>
-$(document).ready(function(){
-    $('.thumbnail').click(function(){
-        var title = $(this).find('h4').text().trim();
-        var image = $(this).children('img').attr('src');
-        var location = $(".locationText").val();
-        $.ajax({
-            url: '/newSighting',
-            method: "POST",
-            data: {title: title, birdImage: image, location: location},
-        }).done(function(sighting){
-            console.log(sighting);
-            var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
-            map.setCenter(latlng);
+    function initMap(){
+        map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 10,
+            center: {lat: 30.2500, lng: -97.7500},
+            mapTypeId: google.maps.MapTypeId.SATELLITE,
+        });
+        var bounds = google.maps.LatLngBounds();
+        map.setTilt(45);
+        var sightings = <%- JSON.stringify(userBirds) %>;
+        for(var x = 0; x < sightings.length; x++){
+            var latlng = new google.maps.LatLng(sightings[x].lat, sightings[x].lng);
+            var image = {url: sightings[x].birdImage, scaledSize: new google.maps.Size(20, 20)};
             var marker = new google.maps.Marker({
                 map: map,
                 position: latlng,
-                title: sighting.birdName
-            }); 
-            window.location.reload();
-        });
-    });        
-});
+                title: sightings[x].birdName,
+                icon: image
+            });
+            bounds.extend(latlng);
+        }
+        map.fitBounds(bounds);
+    }
 </script>
+
+<% } %>
 
 <script>
-
+    $(document).ready(function(){
+        $('.thumbnail').click(function(){
+            var title = $(this).find('h4').text().trim();
+            var image = $(this).children('img').attr('src');
+            var location = $(".locationText").val();
+            $.ajax({
+                url: '/newSighting',
+                method: "POST",
+                data: {title: title, birdImage: image, location: location},
+            }).done(function(sighting){
+                var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
+                var image = {url: sightings.birdImage, scaledSize: new google.maps.Size(20, 20)};
+                map.setCenter(latlng);
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: latlng,
+                    title: sighting.birdName,
+                    icon: image
+                }); 
+            });
+            window.location.reload();
+        });        
+    });
 </script>
-
 
 <% include ./partials/footer %>
 
