--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,6 +77,7 @@
 <% if(locals.user){ %>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
 <script>
+// google maps does not like to be inside of document ready function!!
     function initMap(){
         map = new google.maps.Map(document.getElementById('map'), {
             zoom: 4,
@@ -95,6 +96,7 @@
             });
         }
     };
+
     $(document).ready(function(){
         $('.thumbnail').click(function(){
             var title = $(this).find('h4').text().trim();
