--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Birds</h4>
-                <input type="text" class="locationText" placeholder="Hey stupid. Your address goes here.">
+                <input type="text" class="locationText" placeholder="** Sighting address required. **">
               </div>
               <div class="modal-body">
                     <div class="row">
@@ -77,6 +77,7 @@
 <% if(locals.user){ %>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
 <script>
+    var reply;
 // google maps does not like to be inside of document ready function!!
     function initMap(){
         map = new google.maps.Map(document.getElementById('map'), {
@@ -114,7 +115,7 @@
                 method: "POST",
                 data: {title: title, birdImage: image, location: location},
             }).done(function(sighting){
-              console.log ("sighting:", sighting);
+                console.log (sighting);
                 var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
                 var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)}
                 var marker = new google.maps.Marker({
@@ -123,6 +124,16 @@
                     title: sighting.birdName,
                     icon: image
                 });
+            // }).done(function(sighting){
+            //   console.log ("sighting:")
+            //     var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
+            //     var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)}
+            //     var marker = new google.maps.Marker({
+            //         map: map,
+            //         position: latlng,
+            //         title: sighting.birdName,
+            //         icon: image
+            //     });
 // >>>>>>> master
             });
 
