--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
 <% if(locals.user){ %>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
 <script>
-    var reply;
+    var sSighting;
 // google maps does not like to be inside of document ready function!!
     function initMap(){
         map = new google.maps.Map(document.getElementById('map'), {
@@ -105,17 +105,11 @@
             var location = $(".locationText").val();
             $.ajax({
                 url: '/newSighting',
-// <<<<<<< HEAD
-//                 // url: 'http://localhost:3000/newSighting',
-//                 method: "post",
-//                 data: {title: title, birdImage: image}
-//             }).done(function(newBird) {
-//               $("#userBirdList").prepend(newBird);
-// =======
                 method: "POST",
                 data: {title: title, birdImage: image, location: location},
             }).done(function(sighting){
-                console.log (sighting);
+                $("#userBirdList").prepend(sighting.html);
+                console.log ("sSighting:", sSighting);
                 var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
                 var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)}
                 var marker = new google.maps.Marker({
@@ -124,17 +118,6 @@
                     title: sighting.birdName,
                     icon: image
                 });
-            // }).done(function(sighting){
-            //   console.log ("sighting:")
-            //     var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
-            //     var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)}
-            //     var marker = new google.maps.Marker({
-            //         map: map,
-            //         position: latlng,
-            //         title: sighting.birdName,
-            //         icon: image
-            //     });
-// >>>>>>> master
             });
 
         });
